fix T39967: Added support for Import/export of vertex color layers