source/blender/collada/MeshImporter.h
@@ -77,6 +77,14 @@ public:
 	void getUV(int uv_index, float *uv);
 };
 
+class VCOLDataWrapper
+{
+	COLLADAFW::MeshVertexData *mVData;
+public:
+	VCOLDataWrapper(COLLADAFW::MeshVertexData& vdata);
+	void get_vcol(int v_index, MLoopCol *mloopcol);
+};
+
 class MeshImporter : public MeshImporterBase
 {
 private:
@@ -112,6 +120,12 @@ private:
 					 int loop_index,
 					 COLLADAFW::IndexList& index_list,
 					 int count);
+
+	void set_vcol(MLoopCol *mloopcol,
+		          VCOLDataWrapper &vob,
+		          int loop_index,
+		          COLLADAFW::IndexList& index_list,
+		          int count);
 
 #ifdef COLLADA_DEBUG
 	void print_index_list(COLLADAFW::IndexList& index_list);
